tests/paczka1/small_fuzzy/11142326.err
Error in line 2: CxWOWib A93 27,2
Error in line 4: 47rqk S207 94,7
